--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-09-08" />
+<meta name="date" content="2023-11-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,7 +31,7 @@
   
   
 
-<link rel="next" href="russia.html"/>
+<link rel="next" href="roman-empire.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -77,8 +77,12 @@
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> History</a></li>
-<li class="chapter" data-level="2" data-path="russia.html"><a href="russia.html"><i class="fa fa-check"></i><b>2</b> Russia</a></li>
-<li class="chapter" data-level="3" data-path="usa.html"><a href="usa.html"><i class="fa fa-check"></i><b>3</b> USA</a></li>
+<li class="chapter" data-level="2" data-path="roman-empire.html"><a href="roman-empire.html"><i class="fa fa-check"></i><b>2</b> Roman Empire</a></li>
+<li class="chapter" data-level="3" data-path="israel.html"><a href="israel.html"><i class="fa fa-check"></i><b>3</b> Israel</a></li>
+<li class="chapter" data-level="4" data-path="russia.html"><a href="russia.html"><i class="fa fa-check"></i><b>4</b> Russia</a></li>
+<li class="chapter" data-level="5" data-path="usa.html"><a href="usa.html"><i class="fa fa-check"></i><b>5</b> USA</a></li>
+<li class="chapter" data-level="6" data-path="fordism.html"><a href="fordism.html"><i class="fa fa-check"></i><b>6</b> Fordism</a></li>
+<li class="chapter" data-level="7" data-path="war.html"><a href="war.html"><i class="fa fa-check"></i><b>7</b> War</a></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
 <li class="chapter" data-level="A" data-path="about.html"><a href="about.html"><i class="fa fa-check"></i><b>A</b> About</a></li>
@@ -107,7 +111,7 @@
 <div id="header">
 <h1 class="title">History</h1>
 <p class="author"><em>Dyrehaugen Web Notebook</em></p>
-<p class="date"><em>2023-09-08</em></p>
+<p class="date"><em>2023-11-15</em></p>
 </div>
 <div id="history" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> History<a href="index.html#history" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -120,7 +124,7 @@
         </div>
       </div>
 
-<a href="russia.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="roman-empire.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
