--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-11-15" />
+<meta name="date" content="2023-12-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -78,11 +78,12 @@
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> History</a></li>
 <li class="chapter" data-level="2" data-path="roman-empire.html"><a href="roman-empire.html"><i class="fa fa-check"></i><b>2</b> Roman Empire</a></li>
-<li class="chapter" data-level="3" data-path="israel.html"><a href="israel.html"><i class="fa fa-check"></i><b>3</b> Israel</a></li>
-<li class="chapter" data-level="4" data-path="russia.html"><a href="russia.html"><i class="fa fa-check"></i><b>4</b> Russia</a></li>
-<li class="chapter" data-level="5" data-path="usa.html"><a href="usa.html"><i class="fa fa-check"></i><b>5</b> USA</a></li>
-<li class="chapter" data-level="6" data-path="fordism.html"><a href="fordism.html"><i class="fa fa-check"></i><b>6</b> Fordism</a></li>
-<li class="chapter" data-level="7" data-path="war.html"><a href="war.html"><i class="fa fa-check"></i><b>7</b> War</a></li>
+<li class="chapter" data-level="3" data-path="british-empire.html"><a href="british-empire.html"><i class="fa fa-check"></i><b>3</b> British Empire</a></li>
+<li class="chapter" data-level="4" data-path="israel.html"><a href="israel.html"><i class="fa fa-check"></i><b>4</b> Israel</a></li>
+<li class="chapter" data-level="5" data-path="russia.html"><a href="russia.html"><i class="fa fa-check"></i><b>5</b> Russia</a></li>
+<li class="chapter" data-level="6" data-path="usa.html"><a href="usa.html"><i class="fa fa-check"></i><b>6</b> USA</a></li>
+<li class="chapter" data-level="7" data-path="fordism.html"><a href="fordism.html"><i class="fa fa-check"></i><b>7</b> Fordism</a></li>
+<li class="chapter" data-level="8" data-path="war.html"><a href="war.html"><i class="fa fa-check"></i><b>8</b> War</a></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
 <li class="chapter" data-level="A" data-path="about.html"><a href="about.html"><i class="fa fa-check"></i><b>A</b> About</a></li>
