--- a/british-empire.html
+++ b/british-empire.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-02" />
+<meta name="date" content="2023-12-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,7 +31,7 @@
   
   
 <link rel="prev" href="roman-empire.html"/>
-<link rel="next" href="israel.html"/>
+<link rel="next" href="napoleonic-empire.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -79,11 +79,13 @@
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> History</a></li>
 <li class="chapter" data-level="2" data-path="roman-empire.html"><a href="roman-empire.html"><i class="fa fa-check"></i><b>2</b> Roman Empire</a></li>
 <li class="chapter" data-level="3" data-path="british-empire.html"><a href="british-empire.html"><i class="fa fa-check"></i><b>3</b> British Empire</a></li>
-<li class="chapter" data-level="4" data-path="israel.html"><a href="israel.html"><i class="fa fa-check"></i><b>4</b> Israel</a></li>
-<li class="chapter" data-level="5" data-path="russia.html"><a href="russia.html"><i class="fa fa-check"></i><b>5</b> Russia</a></li>
-<li class="chapter" data-level="6" data-path="usa.html"><a href="usa.html"><i class="fa fa-check"></i><b>6</b> USA</a></li>
-<li class="chapter" data-level="7" data-path="fordism.html"><a href="fordism.html"><i class="fa fa-check"></i><b>7</b> Fordism</a></li>
-<li class="chapter" data-level="8" data-path="war.html"><a href="war.html"><i class="fa fa-check"></i><b>8</b> War</a></li>
+<li class="chapter" data-level="4" data-path="napoleonic-empire.html"><a href="napoleonic-empire.html"><i class="fa fa-check"></i><b>4</b> Napoleonic Empire</a></li>
+<li class="chapter" data-level="5" data-path="israel.html"><a href="israel.html"><i class="fa fa-check"></i><b>5</b> Israel</a></li>
+<li class="chapter" data-level="6" data-path="russia.html"><a href="russia.html"><i class="fa fa-check"></i><b>6</b> Russia</a></li>
+<li class="chapter" data-level="7" data-path="spain.html"><a href="spain.html"><i class="fa fa-check"></i><b>7</b> Spain</a></li>
+<li class="chapter" data-level="8" data-path="usa.html"><a href="usa.html"><i class="fa fa-check"></i><b>8</b> USA</a></li>
+<li class="chapter" data-level="9" data-path="fordism.html"><a href="fordism.html"><i class="fa fa-check"></i><b>9</b> Fordism</a></li>
+<li class="chapter" data-level="10" data-path="war.html"><a href="war.html"><i class="fa fa-check"></i><b>10</b> War</a></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
 <li class="chapter" data-level="A" data-path="about.html"><a href="about.html"><i class="fa fa-check"></i><b>A</b> About</a></li>
@@ -123,7 +125,7 @@
         </div>
       </div>
 <a href="roman-empire.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="israel.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="napoleonic-empire.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
