--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-02" />
+<meta name="date" content="2023-12-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -79,11 +79,13 @@
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> History</a></li>
 <li class="chapter" data-level="2" data-path="roman-empire.html"><a href="roman-empire.html"><i class="fa fa-check"></i><b>2</b> Roman Empire</a></li>
 <li class="chapter" data-level="3" data-path="british-empire.html"><a href="british-empire.html"><i class="fa fa-check"></i><b>3</b> British Empire</a></li>
-<li class="chapter" data-level="4" data-path="israel.html"><a href="israel.html"><i class="fa fa-check"></i><b>4</b> Israel</a></li>
-<li class="chapter" data-level="5" data-path="russia.html"><a href="russia.html"><i class="fa fa-check"></i><b>5</b> Russia</a></li>
-<li class="chapter" data-level="6" data-path="usa.html"><a href="usa.html"><i class="fa fa-check"></i><b>6</b> USA</a></li>
-<li class="chapter" data-level="7" data-path="fordism.html"><a href="fordism.html"><i class="fa fa-check"></i><b>7</b> Fordism</a></li>
-<li class="chapter" data-level="8" data-path="war.html"><a href="war.html"><i class="fa fa-check"></i><b>8</b> War</a></li>
+<li class="chapter" data-level="4" data-path="napoleonic-empire.html"><a href="napoleonic-empire.html"><i class="fa fa-check"></i><b>4</b> Napoleonic Empire</a></li>
+<li class="chapter" data-level="5" data-path="israel.html"><a href="israel.html"><i class="fa fa-check"></i><b>5</b> Israel</a></li>
+<li class="chapter" data-level="6" data-path="russia.html"><a href="russia.html"><i class="fa fa-check"></i><b>6</b> Russia</a></li>
+<li class="chapter" data-level="7" data-path="spain.html"><a href="spain.html"><i class="fa fa-check"></i><b>7</b> Spain</a></li>
+<li class="chapter" data-level="8" data-path="usa.html"><a href="usa.html"><i class="fa fa-check"></i><b>8</b> USA</a></li>
+<li class="chapter" data-level="9" data-path="fordism.html"><a href="fordism.html"><i class="fa fa-check"></i><b>9</b> Fordism</a></li>
+<li class="chapter" data-level="10" data-path="war.html"><a href="war.html"><i class="fa fa-check"></i><b>10</b> War</a></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
 <li class="chapter" data-level="A" data-path="about.html"><a href="about.html"><i class="fa fa-check"></i><b>A</b> About</a></li>
@@ -112,7 +114,7 @@
 <div id="header">
 <h1 class="title">History</h1>
 <p class="author"><em>Dyrehaugen Web Notebook</em></p>
-<p class="date"><em>2023-12-02</em></p>
+<p class="date"><em>2023-12-04</em></p>
 </div>
 <div id="history" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> History<a href="index.html#history" class="anchor-section" aria-label="Anchor link to header"></a></h1>
