--- a/sitelog.html
+++ b/sitelog.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-10" />
+<meta name="date" content="2023-12-12" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -79,7 +79,10 @@
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> History</a></li>
 <li class="chapter" data-level="2" data-path="roman-empire.html"><a href="roman-empire.html"><i class="fa fa-check"></i><b>2</b> Roman Empire</a></li>
 <li class="chapter" data-level="3" data-path="british-empire.html"><a href="british-empire.html"><i class="fa fa-check"></i><b>3</b> British Empire</a></li>
-<li class="chapter" data-level="4" data-path="napoleonic-empire.html"><a href="napoleonic-empire.html"><i class="fa fa-check"></i><b>4</b> Napoleonic Empire</a></li>
+<li class="chapter" data-level="4" data-path="napoleonic-empire.html"><a href="napoleonic-empire.html"><i class="fa fa-check"></i><b>4</b> Napoleonic Empire</a>
+<ul>
+<li class="chapter" data-level="4.1" data-path="napoleonic-empire.html"><a href="napoleonic-empire.html#economic-reforms"><i class="fa fa-check"></i><b>4.1</b> Economic Reforms</a></li>
+</ul></li>
 <li class="chapter" data-level="5" data-path="israel.html"><a href="israel.html"><i class="fa fa-check"></i><b>5</b> Israel</a></li>
 <li class="chapter" data-level="6" data-path="russia.html"><a href="russia.html"><i class="fa fa-check"></i><b>6</b> Russia</a></li>
 <li class="chapter" data-level="7" data-path="spain.html"><a href="spain.html"><i class="fa fa-check"></i><b>7</b> Spain</a></li>
@@ -115,6 +118,9 @@
 <div id="sitelog" class="section level1 hasAnchor" number="14">
 <h1><span class="header-section-number">D</span> Sitelog<a href="sitelog.html#sitelog" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p><strong>Latest Additions</strong></p>
+<p>December 11, 2023 napoleon\
+       napoleons war economy<br />
+</p>
 
 
 </div>
